# Lget

./: .txt  CMakeLists.txt  README.md  test.json
cmake_build_Debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lget.sln  lget.vcxproj  lget.vcxproj.filters
cmake_build_Debug/.cmake/api/v1/reply/: cmakeFiles-v1-093fafbfcede40b40708.json  codemodel-v2-79c356b119dd743b29ac.json  index-2023-09-12T11-44-58-0492.json  target-ALL_BUILD-Release-b69f03eb0f318babeeef.json  target-ZERO_CHECK-Debug-327a3b65edb01b7525d0.json  target-lget-Debug-e60cb92cf5f7fd397e2d.json  target-lget-MinSizeRel-7701204e5f8b81e747ef.json  target-lget-RelWithDebInfo-ed42bce646894faec441.json  target-lget-Release-c60757e722c760c25dcc.json
cmake_build_Debug/lget.dir/Debug/: lget.exe.recipe  lget.ilk
cmake_build_Debug/lget.dir/Debug/lget.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  lget.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake_build_Debug/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmake_build_Debug/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: fn.cpp  fn.hpp  list.cpp  list.hpp  load-save.cpp  load-save.hpp  main.cpp  msg.hpp  parser.cpp  parser.hpp  save.cpp  save.hpp
src/save/: save.cpp  save.hpp
